--- a/src/InteractiveVisualizer/index.html
+++ b/src/InteractiveVisualizer/index.html
@@ -3,18 +3,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>MessageCard Playground</title>
+    <title>Adaptive Card Visualizer</title>
 
     <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/fabric-core/4.0.0/fabric.min.css">
     <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/fabric-js/1.0.0/fabric.components.min.css">
 
     <link rel="stylesheet" href="./css/flexiblecard.css" type="text/css" />
     <link rel="stylesheet" href="./css/app.css" type="text/css" />
-    <script src="js/adaptivecard.js"></script>
-    <script src="js/swiftcard.js"></script>
-    <script src="js/app.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/markdown-it/7.0.0/markdown-it.min.js"></script>
     <script src="ace/src-min/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://cdn.jsdelivr.net/markdown-it/7.0.0/markdown-it.min.js"></script>
+
+    <script src="js/adaptivecard.js"></script>
+    <script src="js/app.js"></script>    
 </head>
 <body>
     <div class="uiRoot">
