--- a/src/InteractiveVisualizer/adaptiveCardVisualizer.html
+++ b/src/InteractiveVisualizer/adaptiveCardVisualizer.html
@@ -5,9 +5,6 @@
     <meta charset="utf-8" />
     <title>Adaptive Card Visualizer</title>
 
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/fabric-core/4.0.0/fabric.min.css">
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/fabric-js/1.0.0/fabric.components.min.css">
-
     <link rel="stylesheet" href="./css/flexiblecard.css" type="text/css" />
     <link rel="stylesheet" href="./css/app.css" type="text/css" />
 
@@ -23,22 +20,22 @@
             <div class="markup">
                 <div id="editor">
 {
-	"type": "AdaptiveCard",
+	"@type": "AdaptiveCard",
 	"sections": [
 		{
 			"items": [
 				{
-					"type": "TextBlock",
+					"@type": "TextBlock",
 					"text": "This is a text element",
 					"style": "sectionTitle"
 				},
 				{
-					"type": "Picture",
+					"@type": "Picture",
 					"url": "http://connectorsdemo.azurewebsites.net/images/MicrosoftSurface_024_Cafe_OH-06315_VS_R1c.jpg",
 					"size": "medium"
 				},
 				{
-					"type": "FactGroup",
+					"@type": "FactGroup",
 					"items": [
 						{
 							"name": "This is a fact name",
@@ -55,15 +52,15 @@
 					]
 				},
 				{
-				    "type": "DateInput"
+				    "@type": "DateInput"
 				},
 				{
-				    "type": "TextInput",
+				    "@type": "TextInput",
 				    "topSpacing": "narrow",
 				    "title": "Enter text here"
 				},
 				{
-				    "type": "MultichoiceInput",
+				    "@type": "MultichoiceInput",
 				    "topSpacing": "narrow",
 				    "choices": [
 				        { "display": "Choice 1", "value": "1" },
@@ -72,7 +69,7 @@
 				    ]
 				},
 				{
-					"type": "PictureGallery",
+					"@type": "PictureGallery",
 					"imageSize": "medium",
 					"items": [
 						"http://connectorsdemo.azurewebsites.net/images/MicrosoftSurface_024_Cafe_OH-06315_VS_R1c.jpg",
@@ -81,21 +78,21 @@
 					]
 				},
 				{
-					"type": "ActionGroup",
+					"@type": "ActionGroup",
 					"items": [
 						{
-							"type": "ActionCard",
+							"@type": "ActionCard",
 							"name": "Comment",
 							"card": {
 							    "items": [
 							        {
-							            "type": "FlexBox",
+							            "@type": "ColumnGroup",
 							            "items": [
 							                {
 							                    "size": 50,
 							                    "items": [
 							                        {
-							                            "type": "TextInput"
+							                            "@type": "TextInput"
 							                        }
 							                    ]
 							                },
@@ -103,11 +100,11 @@
 							                    "size": 50,
 							                    "items": [
 							                        {
-							                            "type": "DateInput",
+							                            "@type": "DateInput",
 							                            "size": "stretch"
 							                        },
 							                        {
-                    									"type": "MultichoiceInput",
+                    									"@type": "MultichoiceInput",
 							                            "size": "stretch",
                     									"topSpacing": "narrow",
                     									"id": "list",
@@ -132,7 +129,7 @@
 							            ]
 							        },
 							        {
-							            "type": "TextInput",
+							            "@type": "TextInput",
 							            "topSpacing": "narrow"
 							        }
 							    ]
@@ -140,7 +137,7 @@
 							"inputs": [
 								{
 
-									"type": "TextInput",
+									"@type": "TextInput",
 									"id": "comment",
 									"isMultiline": true,
 									"title": "Input's title property"
@@ -148,7 +145,7 @@
 							],
 							"actions": [
 								{
-									"type": "HttpPOST",
+									"@type": "HttpPOST",
 									"name": "Action's name prop.",
 									"target": "http://...",
 									"successMessage": "This is the action's successMessage property.",
@@ -158,11 +155,11 @@
 							]
 						},
 						{
-							"type": "ActionCard",
+							"@type": "ActionCard",
 							"name": "Move",
 							"inputs": [
 								{
-									"type": "MultichoiceInput",
+									"@type": "MultichoiceInput",
 									"id": "list",
 									"title": "Pick an option",
 									"choices": [
@@ -183,7 +180,7 @@
 							],
 							"actions": [
 								{
-									"type": "HttpPOST",
+									"@type": "HttpPOST",
 									"name": "Action's name prop.",
 									"target": "http://...",
 									"successMessage": "This is the action's successMessage property.",
@@ -192,18 +189,18 @@
 							]
 						},
 						{
-							"type": "ActionCard",
+							"@type": "ActionCard",
 							"name": "Due Date",
 							"inputs": [
 								{
-									"type": "DateInput",
+									"@type": "DateInput",
 									"id": "dueDate",
 									"title": "Input's title property"
 								}
 							],
 							"actions": [
 								{
-									"type": "HttpPOST",
+									"@type": "HttpPOST",
 									"name": "Action's name prop.",
 									"target": "http://...",
 									"successMessage": "This is the action's successMessage property.",
@@ -213,7 +210,7 @@
 							]
 						},
 						{
-							"type": "HttpPOST",
+							"@type": "HttpPOST",
 
 							"name": "Action's name prop.",
 							"target": "http://...",
@@ -221,7 +218,7 @@
 							"errorMessage": "This is the action's errorMessage property."
 						},
 						{
-							"type": "OpenUri",
+							"@type": "OpenUri",
 							"name": "Action's name prop",
 							"targets": [
 								{
@@ -237,21 +234,21 @@
 		{
 			"items": [
 				{
-					"type": "Separator"
+					"@type": "Separator"
 				},
 				{
-					"type": "TextBlock",
+					"@type": "TextBlock",
 					"text": "Second section",
 					"style": "sectionTitle"
 				},
 				{
-					"type": "FlexBox",
+					"@type": "ColumnGroup",
 					"items": [
 						{
 							"size": "auto",
 							"items": [
                 				{
-                					"type": "Picture",
+                					"@type": "Picture",
                 					"url": "http://connectorsdemo.azurewebsites.net/images/MSC12_Oscar_002.jpg",
                 					"size": "small"
                 				}
@@ -261,18 +258,18 @@
 							"size": "stretch",
 							"items": [
 							    {
-							        "type": "TextBlock",
+							        "@type": "TextBlock",
 							        "text": "This is the activityTitle property",
 							        "style": "activityTitle"
 							    },
 							    {
-							        "type": "TextBlock",
+							        "@type": "TextBlock",
 							        "text": "This is the activitySubtitle property",
 							        "style": "activitySubtitle",
 									"topSpacing": "none"
 							    },
 							    {
-							        "type": "TextBlock",
+							        "@type": "TextBlock",
 							        "text": "This is the activityText property",
 							        "style": "activityText",
 									"topSpacing": "none"
@@ -283,16 +280,16 @@
 						    "size": "large",
 						    "items": [
                 				{
-                				    "type": "DateInput",
+                				    "@type": "DateInput",
                 				    "size": "stretch"
                 				},
                 				{
-                				    "type": "TextInput",
+                				    "@type": "TextInput",
                 				    "topSpacing": "narrow",
                 				    "title": "Enter text here"
                 				},
                 				{
-                				    "type": "MultichoiceInput",
+                				    "@type": "MultichoiceInput",
                 				    "size": "stretch",
                 				    "topSpacing": "narrow",
                 				    "choices": [
