Adding assets Adding weather sample Changing page title for playground app

--- a/src/InteractiveVisualizer/messageCardVisualizer.html
+++ b/src/InteractiveVisualizer/messageCardVisualizer.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Adaptive Card Visualizer</title>
+    <title>MessageCard Playground</title>
 
     <link rel="stylesheet" href="./css/flexiblecard.css" type="text/css" />
     <link rel="stylesheet" href="./css/app.css" type="text/css" />
