--- a/src/InteractiveVisualizer/messageCardVisualizer.html
+++ b/src/InteractiveVisualizer/messageCardVisualizer.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>MessageCard Playground</title>
 
-    <link rel="stylesheet" href="./css/flexiblecard.css" type="text/css" />
+    <link rel="stylesheet" href="./css/adaptivecard.css" type="text/css" />
     <link rel="stylesheet" href="./css/app.css" type="text/css" />
 
 	<script src="https://cdn.jsdelivr.net/markdown-it/7.0.0/markdown-it.min.js"></script>
