--- a/src/InteractiveVisualizer/messageCardVisualizer.html
+++ b/src/InteractiveVisualizer/messageCardVisualizer.html
@@ -6,6 +6,7 @@
     <title>MessageCard Playground</title>
 
     <link rel="stylesheet" href="./css/adaptivecard.css" type="text/css" />
+    <link rel="stylesheet" href="./css/controls.css" type="text/css" />
     <link rel="stylesheet" href="./css/app.css" type="text/css" />
 
 	<script src="https://cdn.jsdelivr.net/markdown-it/7.0.0/markdown-it.min.js"></script>
