--- a/Visualizer/adaptiveCardVisualizer.html
+++ b/Visualizer/adaptiveCardVisualizer.html
@@ -15,8 +15,20 @@
 </head>
 <body>
     <div class="uiRoot">
+        <div class="uiHeader" style="display: flex;">
+			<div class="leftPane">
+				<div style="width: 0px; height: 0px; overflow: hidden">
+					<input type="file" id="filePicker" />
+				</div>
+            	<button style="height: 100%; float:left; display: table;" onclick="openFilePicker();">Load sample from file...</button>
+			</div>
+			<div class="rightPane">
+                <span style="margin-right: 6px;">Select a container:</span>
+				<select id="hostContainerPicker" style="height: 100%;"></select>
+			</div>
+        </div>
         <div class="cardEditor">
-            <div class="markup">
+            <div class="leftPane">
                 <div id="editor">
 {
 	"@type": "AdaptiveCard",
@@ -301,18 +313,9 @@
 }
                 </div>
             </div>
-            <div class="markupRenderContainer">
+            <div class="rightPane">
                 <div id="content" class="markupRender"></div>
             </div>
-        </div>
-        <div class="uiFooter">
-            <div style="width: 0px; height: 0px; overflow: hidden">
-                <input type="file" id="filePicker" />
-            </div>
-			<span>
-            	<button onclick="openFilePicker();">Load sample from file...</button>
-				<select id="hostContainerPicker" style="select multichoiceInput"/>
-			</span>
         </div>
     </div>
     <script>
