Fix "Load sample"

--- a/Visualizer/index.html
+++ b/Visualizer/index.html
@@ -16,7 +16,7 @@
 				<div style="width: 0px; height: 0px; overflow: hidden">
 					<input type="file" id="filePicker" />
 				</div>
-            	<button style="height: 100%; float:left; display: table;" onclick="openFilePicker();">Load sample from file...</button>
+            	<div id="loadSample" class="button" style="height: 100%; float:left; display: table;">Load sample from file...</div>
 			</div>
 			<div class="rightPane">
                 <span style="margin-right: 6px;">Select a container:</span>
