updating published visualizer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./css/app.css" type="text/css" />
 
-    <script src="./dist/bundle.js"></script>
+    <script src="dist/bundle.js"></script>
 </head>
 <body>
     <div class="uiRoot">
