--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <div class="uiRoot">
         <div class="uiHeader" style="display: flex;">
+            <div style="margin:4px;">Samples:</div>
+            <a href="https://github.com/Microsoft/AdaptiveCards/tree/master/samples/Proposed/TextBlock" target="_blank" style="margin:4px">TextBlock</a>
+            <a href="https://github.com/Microsoft/AdaptiveCards/tree/master/samples/Proposed/Scenarios" target="_blank" style="margin:4px">Scenarios</a>
+            
 			<div class="leftPane">
 				<div style="width: 0px; height: 0px; overflow: hidden">
 					<input type="file" id="filePicker" />
