--- a/html/visualizer/index.html
+++ b/html/visualizer/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <title>Adaptive Card Visualizer</title>
 
-    <link rel="stylesheet" href="./css/app.css" type="text/css" />
+    <link rel="stylesheet" href="../../css/app.css" type="text/css" />
 
-    <script src="dist/bundle.js"></script>
+    <script src="../../dist/bundle.js"></script>
 </head>
 <body>
     <div class="uiRoot">
