--- a/html/visualizer/index.html
+++ b/html/visualizer/index.html
@@ -35,6 +35,9 @@
             </div>
             <div class="rightPane">
                 <div id="content" class="markupRender"></div>
+                <div id="popupCardContainer" style="margin-top: 30px; padding: 10px; border: 1px solid #EEEEEE;">
+                    <div>ActionShowCard popups will appear in this box, according to container settings</div>
+                </div>
             </div>
         </div>
     </div>
