build / webpack renderer and visualizer separately

--- a/source/html/visualizer/index.html
+++ b/source/html/visualizer/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <title>Adaptive Card Visualizer</title>
 
-    <link rel="stylesheet" href="../../css/app.css" type="text/css" />
+    <link rel="stylesheet" href="css/app.css" type="text/css" />
 
-    <script src="../../dist/bundle.js"></script>
+    <script src="../renderer/index.js"></script>
+    <script src="bundle.js"></script>
 </head>
 <body>
     <div class="uiRoot">
