--- a/source/html/visualizer/use-cdn.html
+++ b/source/html/visualizer/use-cdn.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="css/app.css" type="text/css" />
 
-    <script src="visualizer-bundle.js"></script>
+    <script src="node_modules/adaptive-card-html-renderer/adaptive.js"></script>
+    <script src="visualizer-use-cdn.js"></script>
 </head>
 <body>
     <div class="uiRoot">
