--- a/html/visualizer/index.html
+++ b/html/visualizer/index.html
@@ -12,10 +12,6 @@
 <body>
     <div class="uiRoot">
         <div class="uiHeader" style="display: flex;">
-            <div style="margin:4px;">Samples:</div>
-            <a href="https://github.com/Microsoft/AdaptiveCards/tree/master/samples/Proposed/TextBlock" target="_blank" style="margin:4px">TextBlock</a>
-            <a href="https://github.com/Microsoft/AdaptiveCards/tree/master/samples/Proposed/Scenarios" target="_blank" style="margin:4px">Scenarios</a>
-            
 			<div class="leftPane">
 				<div style="width: 0px; height: 0px; overflow: hidden">
 					<input type="file" id="filePicker" />
@@ -34,6 +30,7 @@
                 </div>
             </div>
             <div class="rightPane">
+                <div id="errorContainer" class="errorContainer"></div>
                 <div id="content" class="markupRender"></div>
                 <div id="popupCardContainer" style="margin-top: 30px; padding: 10px; border: 1px solid #EEEEEE;">
                     <div>ActionShowCard popups will appear in this box, according to container settings</div>
