renderer working, visualized not resolving yet

--- a/source/html/visualizer/use-node.html
+++ b/source/html/visualizer/use-node.html
@@ -7,8 +7,7 @@
 
     <link rel="stylesheet" href="css/app.css" type="text/css" />
 
-    <script src="node_modules/adaptive-card-html-renderer/adaptive.js"></script>
-    <script src="visualizer-use-cdn.js"></script>
+    <script src="visualizer-bundle.js"></script>
 </head>
 <body>
     <div class="uiRoot">
