--- a/source/html/visualizer/index.html
+++ b/source/html/visualizer/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="css/app.css" type="text/css" />
 
-    <script src="visualizer-bundle.js"></script>
+    <script src="../renderer/packed/adaptive-cards.js"></script>
+    <script src="visualizer-use-cdn.js"></script>
 </head>
 <body>
     <div class="uiRoot">
