--- a/source/html/visualizer/index.html
+++ b/source/html/visualizer/index.html
@@ -6,9 +6,7 @@
     <title>Adaptive Card Visualizer</title>
 
     <link rel="stylesheet" href="css/app.css" type="text/css" />
-
-    <script src="../renderer/packed/adaptive-cards.js"></script>
-    <script src="visualizer-use-cdn.js"></script>
+    <script src="built/visualizer-with-renderer.js"></script>
 </head>
 <body>
     <div class="uiRoot">
