--- a/source/html/visualizer/use-cdn.html
+++ b/source/html/visualizer/use-cdn.html
@@ -6,8 +6,8 @@
     <title>Adaptive Card Visualizer</title>
 
     <link rel="stylesheet" href="css/app.css" type="text/css" />
-
-    <script src="visualizer-bundle.js"></script>
+    <script src="../renderer/packed/adaptive-cards.js"></script>
+    <script src="built/visualizer.js"></script>
 </head>
 <body>
     <div class="uiRoot">
