--- a/source/html/visualizer/dev.html
+++ b/source/html/visualizer/dev.html
@@ -12,15 +12,13 @@
 <body>
     <div class="uiRoot">
         <div class="uiHeader" style="display: flex;">
-			<div class="leftPane">
-				<div style="width: 0px; height: 0px; overflow: hidden">
-					<input type="file" id="filePicker" />
-				</div>
-            	<div id="loadSample" class="button" style="height: 100%; float:left; display: table;">Load sample from file...</div>
+			<div id="tabStrip" style="flex: 1 1 50%;">
+            	<div id="editCard" class="button" onclick="switchEditors();">Card editor</div>
+                <div id="editConfig" class="button subdued" style="margin-left: 4px;" onclick="switchEditors();">Configuration editor</div>
 			</div>
-			<div class="rightPane">
+            <div style="flex: 1 1 50%;">
                 <span style="margin-right: 6px;">Select a container:</span>
-				<select id="hostContainerPicker" style="height: 100%;"></select>
+				<select id="hostContainerPicker"></select>
 			</div>
         </div>
         <div class="cardEditor">
@@ -33,6 +31,14 @@
                 <div id="errorContainer" class="errorContainer"></div>
                 <div id="content" class="markupRender"></div>
             </div>
+        </div>
+        <div class="uiHeader" style="display: flex;">
+			<div style="flex: 1 1 50%;">
+				<div style="width: 0px; height: 0px; overflow: hidden">
+					<input type="file" id="filePicker" />
+				</div>
+            	<div id="loadSample" class="button">Load sample from file...</div>
+			</div>
         </div>
     </div>
 </body>
