add connect tab

--- a/source/website/wwwroot/index.html
+++ b/source/website/wwwroot/index.html
@@ -57,6 +57,7 @@
             <a href="/explorer" class="w3-bar-item w3-button w3-mobile">Schema Explorer</a>
             <a href="/visualizer" class="w3-bar-item w3-button w3-mobile">Visualizer</a>
             <a href="/samples" class="w3-bar-item w3-button w3-mobile">Samples</a>
+            <a href="/connect" class="w3-bar-item w3-button w3-mobile">Connect</a>
         </div>
     </div>
 
