--- a/source/website/wwwroot/connect/index.html
+++ b/source/website/wwwroot/connect/index.html
@@ -29,7 +29,7 @@
     </div>
 
 
-    <div class="w3-container" id="topic" style="margin-top:100px;margin-left:auto;margin-right:auto;">
+    <div class="w3-container" id="topic" style="margin-top:200px;margin-left:auto;margin-right:auto;max-width:1200px;">
         <h1>Connect with us</h1>
         <p class="banner-text">Tell us what’s working well, what you want to see added or improved, and find out about new updates.</p>
         <div class="w3-row">
