--- a/source/website/wwwroot/connect/index.html
+++ b/source/website/wwwroot/connect/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Adaptive Cards</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="/content/fonts.css">
@@ -18,16 +19,36 @@
     <!-- Nav bar-->
     <div class="w3-top">
         <div class="w3-bar w3-black">
-            <a href="/"><img src="/content/icons_transparent/white-48.png" class="logo" /></a>
-            <a href="/" class="w3-bar-item w3-button w3-mobile">Adaptive Cards</a>
-            <a href="/documentation" class="w3-bar-item w3-button w3-mobile">Documentation</a>
-            <a href="/explorer" class="w3-bar-item w3-button w3-mobile">Schema Explorer</a>
-            <a href="/visualizer" class="w3-bar-item w3-button w3-mobile">Visualizer</a>
-            <a href="/samples" class="w3-bar-item w3-button w3-mobile">Samples</a>
-            <a href="/connect" class="w3-bar-item w3-button w3-mobile">Connect</a>
+            <a href="javascript:void(0);"><img src="/content/icons_transparent/white-48.png" class="logo" /></a>
+            <a href="/" class="w3-bar-item w3-button ">Adaptive Cards</a>
+            <a href="/documentation" class="w3-bar-item w3-button w3-mobile w3-hide-small w3-hide-medium">Documentation</a>
+            <a href="/explorer" class="w3-bar-item w3-button w3-mobile w3-hide-small w3-hide-medium">Schema Explorer</a>
+            <a href="/visualizer" class="w3-bar-item w3-button w3-mobile w3-hide-small w3-hide-medium">Visualizer</a>
+            <a href="/samples" class="w3-bar-item w3-button w3-mobile w3-hide-small w3-hide-medium">Samples</a>
+            <a href="/connect" class="w3-bar-item w3-button w3-mobile w3-hide-small w3-hide-medium">Connect</a>
+            <a href="javascript:void(0)" class="w3-bar-item w3-button w3-hide-large w3-right " onclick="showNav()">&#9776;</a>
+
         </div>
     </div>
-
+    <!-- nav bar small-->
+    <div id="navBarSmall" class="w3-bar-block w3-black w3-hide w3-hide-large ">
+        <a href="/" class="w3-bar-item w3-button ">Adaptive Cards</a>
+        <a href="/documentation" class="w3-bar-item w3-button ">Documentation</a>
+        <a href="/explorer" class="w3-bar-item w3-button ">Schema Explorer</a>
+        <a href="/visualizer" class="w3-bar-item w3-button ">Visualizer</a>
+        <a href="/samples" class="w3-bar-item w3-button ">Samples</a>
+        <a href="/connect" class="w3-bar-item w3-button ">Connect</a>
+    </div>
+    <script>
+        function showNav() {
+            var x = document.getElementById("navBarSmall");
+            if (x.className.indexOf("w3-show") == -1) {
+                x.className += " w3-show";
+            } else {
+                x.className = x.className.replace(" w3-show", "");
+            }
+        }
+    </script>
 
     <div class="w3-container" id="topic" style="margin-top:200px;margin-left:auto;margin-right:auto;max-width:1200px;">
         <h1>Connect with us</h1>
