fix fonts for visualizer panel

--- a/source/website/wwwroot/visualizer/index.html
+++ b/source/website/wwwroot/visualizer/index.html
@@ -24,6 +24,13 @@
             margin-bottom: 0px;
             border-style: none;
         }
+        h1, h2, h3, h4 {
+            font-family: "Segoe UI Semibold", sans-serif;
+        }
+
+        body, p, th, div, span, input, button, select {
+            font-family: "Segoe UI Semilight", sans-serif;
+        }
     </style>
     <!--<script src="node_modules/microsoft-adaptivecards/dist/adaptive-cards.js"></script>-->
     <script src="built/visualizer-with-renderer.js"></script>
