Fix broken visualizer editor ACE editor uses divs and spans on the editing surface, and requires the font for these to be fixed size. We cannot overrride the font globally for these elements.

--- a/source/website/wwwroot/visualizer/index.html
+++ b/source/website/wwwroot/visualizer/index.html
@@ -24,11 +24,12 @@
             margin-bottom: 0px;
             border-style: none;
         }
+
         h1, h2, h3, h4 {
             font-family: "Segoe UI Semibold", sans-serif;
         }
 
-        body, p, th, div, span, input, button, select {
+        body, p, th, input, button, select {
             font-family: "Segoe UI Semilight", sans-serif;
         }
     </style>
