Fixed documentation and schema for ActionShowCardContent
Action.ShowCard takes an AdaptiveCard, not a Container. Fixed. in the
schema and website docs I could find.

--- a/source/website/wwwroot/explorer/index.html
+++ b/source/website/wwwroot/explorer/index.html
@@ -2654,9 +2654,9 @@ to an arbitrary url.</p>
 </tr>
 <tr>
 <td><strong>card</strong></td>
-<td><a href="#container">Container</a></td>
+<td><a href="#AdaptiveCard">AdaptiveCard</a></td>
 <td>true</td>
-<td>inline container  defining the card to be shown when this action is invoked. It is up to client to decide how to show this inline card.</td>
+<td>inline AdaptiveCard  defining the card to be shown when this action is invoked. It is up to client to decide how to show this inline card.</td>
 </tr>
 </tbody>
 </table>
